Set height of playlist section to auto on small devices to prevent overflow

--- a/src/renderer/views/Watch/Watch.scss
+++ b/src/renderer/views/Watch/Watch.scss
@@ -111,6 +111,9 @@
   .watchVideoSidebar,
   .watchVideoPlaylist {
     height: 500px;
+    @media (max-width: 768px) {
+      height: auto;
+    }
   }
 
   .watchVideoRecommendations,
